--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
 
 .projects-grid {
   display: flex;
+  flex-flow: row wrap;
 }
 
 /*Resume Page css*/
@@ -63,13 +64,13 @@
 
 .contact-list i {
   font-size: 50px;
-  padding-right: 5rem;
+  padding-right: calc(10px + 2vw);
 }
 
 /*bring in a new photo after we finish*/
 .avatar-img {
   height: 300px;
-  padding-top: 4em;
+  margin-top: 4em;
   border-radius: 10px;
 }
 
@@ -82,7 +83,7 @@
 }
 
 .banner-text h1 {
-  font-size: 66px;
+  font-size: calc(20px + 5vw);
   font-weight: bold;
   color: white;
 }
@@ -95,8 +96,9 @@
 
 .banner-text p {
   color: white;
-  font-size: 20px;
+  font-size: calc(10px + 2vw);
   padding: 1em;
+  line-height: calc(10px + 2vw);
 }
 
 .social-links {
@@ -108,6 +110,6 @@
 
 .social-links i {
   color: white;
-  font-size: 5em;
+  font-size: calc(2em + 2vw);
   padding: 8px;
 }
